Add IBM disclaimer to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,6 +39,8 @@
           <a href="http://{{- site.matomo.uri -}}/index.php?module=CoreAdminHome&action=optOut" target="_blank" class="text_muted">Do-not-Track</a>
         {% endif %}
       {% endif%}
+      </br>
+      Disclaimer: The postings on this site are my own and don't necessarily represent IBM's positions, strategies or opinions.
       </p>
           <!-- Please don't remove this, keep my open source work credited :) -->
     <p class="theme-by text-muted">
