--- a/_includes/footer-minimal.html
+++ b/_includes/footer-minimal.html
@@ -11,6 +11,8 @@
     {% if site.url-pretty %}
     &nbsp;&nbsp;&bull;&nbsp;&nbsp;
     <a href="{{ '' | absolute_url }}">{{ site.url-pretty }}</a>
-    {% endif %}
+	{% endif %}
+	</br>
+	Disclaimer: The postings on this site are my own and don't necessarily represent IBM's positions, strategies or opinions.
   </div>
 </footer>
